--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,12 +3,9 @@ spring:
 #    url: jdbc:postgresql://localhost:5432/classify
 #    username: postgres
 #    password: 123456
-#    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-#    username: ${PGUSER}
-#    password: ${PGPASSWORD}
-    url: jdbc:postgresql://viaduct.proxy.rlwy.net:16546/railway
-    username: postgres
-    password: CArBbfxiDbtRNuZVSCeMVQMEJZeMeCDk
+    url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
   flyway:
     baseline-on-migrate: true
   jpa:
