--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 spring:
   datasource:
-#    url: jdbc:postgresql://localhost:5432/classify
-#    username: postgres
-#    password: 123456
     url: jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
     username: ${PGUSER}
     password: ${PGPASSWORD}
+#    url: jdbc:postgresql://viaduct.proxy.rlwy.net:16546/railway
+#    username: postgres
+#    password: CArBbfxiDbtRNuZVSCeMVQMEJZeMeCDk
   flyway:
     baseline-on-migrate: true
   jpa:
@@ -13,6 +13,6 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: validate
-#    properties:
-#      hibernate:
-#        format_sql: true
+    properties:
+      hibernate:
+        format_sql: true
