--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
     implementation 'org.python:jython:2.7.2'
+    implementation('org.eclipse.jetty:jetty-server:12.0.0.beta0')
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
 
     implementation 'org.python:jython:2.7.2'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
